[project]
name = "urdf-bridge-builder"
version = "0.1.0"
description = "A Python package to generate ROS Gazebo bridge YAML from URDF files."
authors = [
  { name = "Your Name", email = "your.email@example.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "typer[all]>=0.9.0",
    "lxml>=4.9.0",
    "pyyaml>=6.0",
    "typing_extensions"
]

[project.scripts]
urdf-bridge-builder = "urdf_bridge_builder.app:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
  "src/urdf_bridge_builder"
]