[project]
name = "urdf-bridge-builder"
dynamic = ["version"]
description = "A Python package to generate ROS Gazebo bridge YAML from URDF files."
authors = [
  { name = "Sean Fish", email = "seanfish@gatech.edu" },
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "typer>=0.9.0",
    "lxml>=4.9.0",
    "pyyaml>=6.0",
    "typing_extensions"
]

[project.scripts]
urdf-bridge-builder = "urdf_bridge_builder.app:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
  "src/urdf_bridge_builder"
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/urdf_bridge_builder/_version.py"